Update style for `Django 6.0`.

--- a/admin_interface/static/admin_interface/css/change-form.css
+++ b/admin_interface/static/admin_interface/css/change-form.css
@@ -1,3 +1,8 @@
+.admin-interface .submit-row {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 /* fix form submit buttons alignemnt and ordering */
 @media (min-width: 768px) {
     .admin-interface .submit-row {
