--- a/admin_interface/static/admin_interface/css/paginator.css
+++ b/admin_interface/static/admin_interface/css/paginator.css
@@ -1,33 +1,24 @@
-.admin-interface #changelist .paginator {
+.admin-interface #changelist .changelist-footer .paginator {
     margin-top: -1px; /* merge 2 borders into 1 */
     line-height: 1.5em;
-    padding-top: 12px;
-    padding-bottom: 12px;
 }
 
-.admin-interface .paginator a,
-.admin-interface .paginator a:link,
-.admin-interface .paginator a:visited,
-.admin-interface .paginator .this-page {
+.admin-interface #changelist .changelist-footer .paginator a,
+.admin-interface #changelist .changelist-footer .paginator a:link,
+.admin-interface #changelist .changelist-footer .paginator a:visited,
+.admin-interface #changelist .changelist-footer .paginator a[aria-current="page"],
+.admin-interface #changelist .changelist-footer .paginator .this-page {
     padding: 7px 12px;
 }
 
-.admin-interface .paginator a,
-.admin-interface .paginator .this-page {
+.admin-interface #changelist .changelist-footer .paginator a,
+.admin-interface #changelist .changelist-footer .paginator a[aria-current="page"],
+.admin-interface #changelist .changelist-footer .paginator .this-page {
     margin-left: 0px;
 }
 
-.admin-interface .paginator .this-page,
-.admin-interface .paginator a.end {
-    margin-right: 25px;
-}
-
-.admin-interface .paginator .this-page + a:not(.showall)  {
-    margin-left: -25px;
-}
-
-body.admin-interface .paginator a.showall,
-body.admin-interface .paginator a.showall:link,
-body.admin-interface .paginator a.showall:visited {
+body.admin-interface #changelist .changelist-footer .paginator a.showall,
+body.admin-interface #changelist .changelist-footer .paginator a.showall:link,
+body.admin-interface #changelist .changelist-footer .paginator a.showall:visited {
     margin-left: 20px;
 }
