--- a/admin_interface/static/admin_interface/css/sticky-form-controls.css
+++ b/admin_interface/static/admin_interface/css/sticky-form-controls.css
@@ -1,7 +1,9 @@
 /* sticky actions */
 
 .admin-interface.sticky-actions #changelist .actions {
-    width: 100%;
+    display: flex;
+    align-items: center;
+    width: auto;
     background: var(--body-bg);
     border-top: none;
     border-bottom: 1px solid #EEEEEE;
@@ -20,7 +22,7 @@
     padding-bottom: 4.375rem;
 }
 
-.admin-interface.sticky-pagination.change-list .paginator {
+.admin-interface.sticky-pagination.change-list #changelist .changelist-footer {
     width: 100%;
     position: fixed;
     bottom: 0;
@@ -31,33 +33,34 @@
     padding-right: 15px;
     white-space: nowrap;
     text-overflow: ellipsis;
+    background: var(--body-bg);
     border-radius: 0;
     border-top: 1px solid #EEEEEE !important;
     border-bottom: none;
     margin: 0;
 }
 
-.admin-interface.sticky-pagination.change-list.popup .paginator {
+.admin-interface.sticky-pagination.change-list.popup #changelist .changelist-footer {
     padding-left: 20px;
     padding-right: 20px;
 }
 
 @media (min-width:768px) {
-    .admin-interface.sticky-pagination.change-list:not(.popup) .paginator {
+    .admin-interface.sticky-pagination.change-list:not(.popup) #changelist .changelist-footer {
         padding-left: 30px;
         padding-right: 30px;
     }
 }
 
 @media (min-width:1024px) {
-    .admin-interface.sticky-pagination.change-list:not(.popup) .paginator {
+    .admin-interface.sticky-pagination.change-list:not(.popup) #changelist .changelist-footer {
         padding-left: 40px;
         padding-right: 40px;
     }
 }
 
 @media (min-width:1280px) {
-    .admin-interface.sticky-pagination.change-list:not(.popup) #main.shifted > #nav-sidebar + .content .paginator {
+    .admin-interface.sticky-pagination.change-list:not(.popup) #main.shifted > #nav-sidebar + .content #changelist .changelist-footer {
         width: calc(100% - 360px);
     }
 }
